<resources>
    <string name="app_name">BMI Calculate</string>
    <string name="calculator">Calculator</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="lb">lb</string>
    <string name="kg">kg</string>
    <string name="ft_in">ft·in</string>
    <string name="cm">cm</string>
    <string name="time">Time</string>
    <string name="age">Age</string>
    <string name="yinhao">"</string>
    <string name="danyinhao">\'</string>
    <string name="cancel">CANCEL</string>
    <string name="cancell">Cancel</string>
    <string name="done">DONE</string>
    <string name="date">DATE</string>
    <string name="bmi">BMI</string>
    <string name="statistics">Statistics</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First</string>
    <string name="second_fragment_label">Second</string>
    <string name="age_gender_format">%d years old (%s)</string>
    <string name="normal_weight_for_height">Normal weight for your height(%s)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="calculate">CALCULATE</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_or_suggestion">Feedback or suggestion</string>
    <string name="save">SAVE</string>
    <string name="delete">Delete</string>
    <string name="your_bmi_is">Your BMI is...</string>
    <string name="apps_you_might_need">Apps you might need</string>
    <string name="category">Category</string>
    <string name="language_options">Language Options</string>
    <string name="english">English</string>
    <string name="portugu_s">Português</string>
    <string name="pycc">Pусский</string>
    <string name="deutsch">Deutsch</string>
    <string name="ch_tw">繁體中文</string>
    <string name="ch">简体中文</string>
    <string name="fran_ais">Français</string>
    <string name="espa_ol">Español</string>
    <string name="italiano">Italiano</string>
    <string name="hg">한국어</string>
    <string name="feedback_thanks_message">Thanks for your feedback! \"%s\" We\'ll do our best to bring a better user experience.</string>
    <string name="me">ME</string>
    <string name="backup_amp_restore"><![CDATA[Backup & Restore]]></string>
    <string name="synchronize_your_data">Synchronize your data</string>
    <string name="cassie">Cassie</string>
    <string name="cassiexiao_gmail_com">cassiexiao@gmail.com</string>
    <string name="language">Language</string>
    <string name="connect_to_google_fit">Connect to Google Fit</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="rate_us">Rate us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="recent">Recent</string>
    <string name="discard">Discard</string>
    <string name="normal">Normal</string>
    <string name="very_severely_underweight">Very Severely Underweight</string>
    <string name="severely_underweight">Severely Underweight</string>
    <string name="underweight">Underweight</string>
    <string name="overweight">Overweight</string>
    <string name="obese_class_i">Obese Class I</string>
    <string name="obese_class_ii">Obese Class II</string>
    <string name="obese_class_iii">Obese Class III</string>
    <string name="deleted_successfully">Deleted successfully.</string>
    <string name="bmi_for_adults">BMI for Adults</string>
    <string name="bmi_for_teenagers">BMI for Teenagers</string>
    <string name="got_it">GOT IT</string>
    <string name="delete_confirm">Delete confirm</string>
    <string name="are_you_sure_you_want_to_delete_this_record">Are you sure you want to delete this record?</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="no_record">No record</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="update">Update</string>
    <string name="quot">\"</string>
    <string name="yh">\'</string>
    <string name="time_morning">Morning</string>
    <string name="time_afternoon">Afternoon</string>
    <string name="time_evening">Evening</string>
    <string name="time_night">Night</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="age_years_old">%d years old</string>
    <string name="bmi_info_format">%s | %s | %s | %s</string>
    <!-- BMI 状态名称 -->
    <string name="bmi_status_very_severely_underweight">Very Severely Underweight</string>
    <string name="bmi_status_severely_underweight">Severely Underweight</string>
    <string name="bmi_status_underweight">Underweight</string>
    <string name="bmi_status_normal">Normal</string>
    <string name="bmi_status_overweight">Overweight</string>
    <string name="bmi_status_obese_class_i">Obese Class I</string>
    <string name="bmi_status_obese_class_ii">Obese Class II</string>
    <string name="bmi_status_obese_class_iii">Obese Class III</string>

    <!-- BMI 描述 -->
    <string name="bmi_desc_very_severely_underweight">We wish you to show some love to yourself! You need to add healthy fats, go nutrient-dense and seek medical advice to gain weight.</string>
    <string name="bmi_desc_severely_underweight">It’s time to take care of yourself and get rid of the risk of poor immune function and osteoporosis. Treat yourself to a balanced meal and a variety of nutrients.</string>
    <string name="bmi_desc_underweight">It seems that your body needs more fuel. Unless you’re naturally very slim, you may need to consider ways of gaining weight as your weight may pose certain health risks.</string>
    <string name="bmi_desc_normal">Congratulations! You’re in a great place now. Keep up your healthy habits to maintain your healthy weight.</string>
    <string name="bmi_desc_overweight">Don’t wait any longer! It’s time to take action to reach your weight target. You are carrying excess fat and should balance your diet and physical activity to achieve a healthy weight.</string>
    <string name="bmi_desc_obese_class_i">Uh-oh! Your current weight is more than the ideal range and you have an increased risk of developing various health problems. It\'s time to embrace healthy eating and increase your activity level.</string>
    <string name="bmi_desc_obese_class_ii">Time to change! You are at high risk of obesity-related diseases. You should increase physical activity and reduce calorie intake slowly but surely. It is also vital to have a health screening.</string>
    <string name="bmi_desc_obese_class_iii">We are worried about you! Your weight is a serious and imminent threat to your health. Go for health advice and a weight loss plan scientifically.</string>
    <string name="error_height_invalid">Please input a valid height (1-250 cm) to calculate your BMI accurately</string>
    <string name="error_height_ft_invalid">Please input a valid height (1\' - 8\' ft) to calculate your BMI accurately</string>
    <string name="error_height_inches_invalid">Please input a valid height (0 - 11 in) to calculate your BMI accurately</string>
    <string name="error_height_full_invalid">Please input a valid height (1\' - 8\'2\'\') to calculate your BMI accurately</string>
    <string name="error_weight_invalid">Please input a valid weight (%.1f - %.1f) to calculate your BMI accurately</string>
</resources>