<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="301dp"
    android:layout_height="154dp"
    android:background="@drawable/bg_discard_dialog">

    <!-- 标题：Delete confirm -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:text="@string/delete_confirm"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_extrabold"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- 提示文案 -->
    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="54.5dp"
        android:layout_marginStart="15dp"
        android:text="@string/are_you_sure_you_want_to_delete_this_record"
        android:textColor="@color/text_black"
        android:textSize="13sp"
        android:fontFamily="@font/montserrat_regular"
        android:includeFontPadding="false"
        android:lineSpacingExtra="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Cancel 按钮 -->
    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="114.5dp"
        android:layout_marginStart="148dp"
        android:text="@string/cancell"
        android:textColor="@color/splash_blue"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_regular"
        android:includeFontPadding="false"
        android:padding="0dp"
        android:maxLines="1"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Delete 按钮 -->
    <TextView
        android:id="@+id/tvDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="114.5dp"
        android:layout_marginStart="220.5dp"
        android:text="@string/delete"
        android:textColor="@color/splash_blue"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_regular"
        android:includeFontPadding="false"
        android:padding="0dp"
        android:maxLines="1"
        android:textAlignment="textEnd"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>