<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_date_picker_bottom"
    android:paddingBottom="10dp"
    android:clipToOutline="true">

    <TextView
        android:id="@+id/tvTimePickerTitle"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/time"
        android:textColor="@color/text_black"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat_extrabold"
        android:letterSpacing="-0.00935"
        android:textAllCaps="true"
        android:gravity="start|center_vertical"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/timePickerContainer"
        android:layout_width="120dp"
        android:layout_height="315dp"
        android:clipChildren="false"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvTimePickerTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTimePicker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:scrollbars="none" />
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnTimeCancel"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="27.5dp"
        app:cardElevation="0dp"
        android:backgroundTint="#F1F1F1"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/timePickerContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnTimeDone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/text_black"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_extrabold"
            android:letterSpacing="-0.00939"
            android:textAllCaps="true"
            android:gravity="center"
            android:layout_gravity="center" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnTimeDone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="27.5dp"
        app:cardElevation="0dp"
        android:backgroundTint="@color/bg_rounded_blue"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/timePickerContainer"
        app:layout_constraintStart_toEndOf="@id/btnTimeCancel"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_extrabold"
            android:letterSpacing="-0.00939"
            android:textAllCaps="true"
            android:gravity="center"
            android:layout_gravity="center" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>